[package]
name = "sa"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }
colored = "3"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
strip-ansi-escapes = "0.2"

[dev-dependencies]
assert_approx_eq = "1.1"
